# func-call-recorder

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py
bindclang/: CMakeLists.txt  README.md  bindclang.cpp
bindclang/Coverage/: CMakeLists.txt
bindclang/Coverage/include/Coverage/: CoverageMapping.h
bindclang/Coverage/source/: CoverageMapping.cpp
controller/: CMakeLists.txt  controller.cpp
docs/: design.md
injector/: CMakeLists.txt  compile.sh  injector.cpp
pyinjector/: README.md  __init__.py  __main__.py  config.py
pyinjector/bindclang/: __init__.py
tests/test-bindclang/: addmm.profdata  test.py
